// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. single inline element 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    Lindsay McIntosh, Scottish Political Editor
  </div>
</div>
`;

exports[`2. with the author in the begining 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    , Environment Editor
  </div>
</div>
`;

exports[`3. with the author at the end 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    RBS Six Nations, 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/mike-atherton"
  >
    Mike Atherton
  </a>
</div>
`;

exports[`4. with multiple authors separated by a pipe 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
     | 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/mike-atherton"
  >
    Mike Atherton
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
     | 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/alexandra-frean"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`5. with multiple authors separated by text with commas 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    , 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/mike-atherton"
  >
    Mike Atherton
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
    , 
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/alexandra-frean"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`6. with multiple authors separated by spaces 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/camilla-long"
  >
    Camilla Long
  </a>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 jnwPHu"
  >
     
  </div>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/mike-atherton"
  >
    Mike Atherton
  </a>
  <a
    className="tc-text-link__TcTextLink-sc-1voa8bp-0 times-text-link__LinkTextObj-sc-12nxzjy-0 boYsan"
    href="/profile/alexandra-frean"
  >
    Alexandra Frean
  </a>
</div>
`;

exports[`7. null with an empty ast 1`] = `null`;
